--- a/templates/base/nav_6c3c.html
+++ b/templates/base/nav_6c3c.html
@@ -23,16 +23,12 @@
     </div>
     <div class="grid_6 alpha">
         <div id="content_6c">
-        {% block content %}
-            major col
-        {% endblock %}
+        {% block content %}{% endblock %}
         </div>
     </div>
     <div class="grid_3 omega">
         <div id="sidebar">
-        {% block sidebar %}
-            sidebar
-        {% endblock %}
+        {% block sidebar %}{% endblock %}
         </div>
     </div>
 {% endblock %}
