--- a/templates/base/nav_9c.html
+++ b/templates/base/nav_9c.html
@@ -13,9 +13,7 @@
         <div class="ribbon_large_wrap"></div>
     </div>
     <div>
-        {% block content %}
-            major col
-        {% endblock %}
+        {% block content %}{% endblock %}
     </div>
 </div>
 {% endblock %}
