--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -1,27 +1,24 @@
-{% extends "rah/base.html" %}
+{% extends "base/nav_form.html" %}
 {% load dated_static %}
-{% block tongue %}{% endblock tongue %}
 {% block title %}Change your Password{% endblock %}
 {% block breadcrumbs %}
-     <div class="prefix_3">
-        <a href="{% url index %}">Home</a> &rsaquo;
-        Change your password
-    </div>
+    <a href="{% url index %}">Home</a> &raquo;
+    Change your password
 {% endblock %}
-{% block right_content %}
-    <div class="prefix_3">
-        <div class="box_two_top"></div>
-        <div class="box_two_middle">
-            <h1>Change your password</h1>
-            <form id="password_change_form" action="" method="post" autocomplete="false">
-                {% include "rah/_overset_form.html" %}
-                <p><input type="submit" value="Submit" /></p>
-                <p><input type="hidden" name="next" value="{{ next|escape }}" /></p>
-                {% csrf_token %}
-            </form>
+{% block form_info %}
+Change your password
+{% endblock %}
+{% block content %}
+            
+    <form id="password_change_form" action="" method="post" autocomplete="false">
+        <h1>Change your password</h1>
+        {% include "base/_form.html" %}
+        {% csrf_token %}
+        <div class="form_buttons">
+            <button class="button_mega" type="submit">Change your password</button>
+            <input type="hidden" name="next" value="{{ next|escape }}" />
         </div>
-        <div class="box_two_bottom"></div>
-    </div>
+    </form>
     <script>
         var RAH = RAH || {};
         RAH.pagescripts = RAH.pagescripts || [];
