--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,30 +1,28 @@
-{% extends "rah/base.html" %}
+{% extends "base/nav_form.html" %}
 {% load dated_static %}
-{% block tongue %}{% endblock tongue %}
 {% block title %}Reset your Password{% endblock %}
 {% block breadcrumbs %}
- <div class="prefix_3">
-    <a href="{% url index %}">Home</a> &rsaquo;
+    <a href="{% url index %}">Home</a> &raquo;
     Reset password
-</div>
 {% endblock %}
-{% block right_content %}
-    <div class="prefix_3">
-        <div class="box_two_top"></div>
-        <div class="box_two_middle">
-            <h1>Reset Password</h1>
-            {% if form %}
-                <form id="password_reset_confirm" action="" method="post" autocomplete="false">
-                    {% include "rah/_overset_form.html" %}
-                    <p><input type="submit" value="Reset password" /></p>
-                    {% csrf_token %}
-                </form>
-            {% else %}
-                <p>This link is no longer valid, please request a new <a href="{% url password_reset %}">password reset</a>.</p>
-            {% endif %}
-        </div>
-        <div class="box_two_bottom"></div>
-    </div>
+{% block form_info %}
+    Pick a new password
+{% endblock %}
+
+{% block content %}
+    {% if form %}
+        <form id="password_reset_confirm" action="" method="post" autocomplete="false">
+        <h1>Reset Password</h1>
+            {% include "base/_form.html" %}
+            {% csrf_token %}
+            <div class="form_buttons">
+                <button class="button_mega" type="submit">Log in</button>
+                <input type="hidden" name="next" value="{{ next|escape }}" />
+            </div>
+        </form>
+    {% else %}
+        <p>This link is no longer valid, please request a new <a href="{% url password_reset %}">password reset</a>.</p>
+    {% endif %}
     <script>
         var RAH = RAH || {};
         RAH.pagescripts = RAH.pagescripts || [];
