--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,25 +1,32 @@
-{% extends "rah/base.html" %}
-{% block tongue %}{% endblock tongue %}
+{% extends "base/nav_form.html" %}
 {% block title %}Reset your Password{% endblock %}
 {% block breadcrumbs %}
- <div class="prefix_3">
-    <a href="{% url index %}">Home</a> &rsaquo;
+    <a href="{% url index %}">Home</a> &raquo;
     Reset password
+{% endblock %}
+{% block form_info %}
+<h3>Need to be someplace else?</h3>
+<ul>
+    <li>
+        <a href="{% url register %}">Create an account</a>
+    </li>
+    <li>
+        <a href="{% url login %}">Log in</a>
+    </li>
+</ul>
+<div class="fb_button" id="fb-login">
+    <a href="#" class="fb_button fb_button_large">
+        <span id="fb_login_text" class="fb_button_text">Login in with Facebook</span>
+    </a>
 </div>
 {% endblock %}
-{% block right_content %}
-<div class="prefix_3">
-    <div class="box_two_top"></div>
-    <div class="box_two_middle">
-        <h1>Reset your password</h1>
-        <form action="" method="post" autocomplete="false">
-            {% include "rah/_overset_form.html" %}
-            <p><input type="submit" value="Reset password" /></p>
-            {% csrf_token %}
-        </form>
-        <a href="{% url django.contrib.auth.views.login %}">Log in</a> or
-        <a href="{% url rah.views.register %}">Sign up</a>
+{% block content %}
+<form action="" method="post" autocomplete="false">
+    <h1>Reset your password</h1>
+    {% include "base/_form.html" %}
+    {% csrf_token %}
+    <div class="form_buttons">
+        <button class="button_mega" type="submit">Reset Password</button>
     </div>
-    <div class="box_two_bottom"></div>
-</div>
+</form>
 {% endblock %}
