--- a/templates/base/nav.html
+++ b/templates/base/nav.html
@@ -2,19 +2,21 @@
 {% block 12c_content %}
 <div class="grid_3 alpha omega">
     <div id="nav">
-        {% if user.is_authenticated %}
-            <div id="profile_picture">
-                <img src="{{ user.get_profile.profile_picture_large }}" alt="Your profile picture" width="200"/>
-            </div>
-            <div>
-                <a href="{% url profile user.id %}" title="View your profile">{{user.get_full_name }}</a>
-            </div>
-            {% if user.get_profile.location %}
-                <div>
-                    {{ user.get_profile.location }}
-                </div>
+        {% if request.user.is_authenticated %}
+            <a href="{% url profile request.user.id %}" title="View your profile">
+                <img id="nav_profile_picture" src="{{ user.get_profile.profile_picture_large }}" alt="Your profile picture" width="186" height="186"/>
+            </a>
+            <h3>
+                <a href="{% url profile request.user.id %}" title="View your profile">
+                   {{request.user.get_full_name }}
+                </a>
+            </h3>
+            {% if request.user.get_profile.location %}
+                <div id="nav_profile_location">{{ request.user.get_profile.location }}</div>
             {% endif %}
-            {{ user.get_profile.total_points }}<span> points</span>
+            <div id="nav_profile_stats">
+                <a href="">{{ request.user.get_profile.total_points }} points</a> | <a href="">8 badges</a>
+            </div>
         {% else %}
         {#Not logged in!#}
         {% endif %}
