--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -1,15 +1,10 @@
-{% extends "rah/base.html" %}
+{% extends "base/nav_6c3c.html" %}
 {% block title %}{{ flatpage.title }}{% endblock %}
 {% block breadcrumbs %}
-    <a href="{% url index %}">Home</a> &rsaquo;
+    <a href="{% url index %}">Home</a> &raquo;
     {{ flatpage.title }}
 {% endblock %}
-{% block right_content %}
-<div class="box_three_top"></div>
-<div id="flat_page" class="box_three_middle">
-    <h1>{{ flatpage.title }}</h1>
+{% block title_bar %}{{ flatpage.title }}{% endblock %}
+{% block content %}
     {{ flatpage.content }}
-</div>
-<div class="box_three_bottom"></div>
 {% endblock %}
-{% block js %}{% endblock %}
