--- a/templates/rah/profile.html
+++ b/templates/rah/profile.html
@@ -1,4 +1,4 @@
-{% extends "rah/base.html" %}
+{% extends "base/nav_6c3c_b.html" %}
 {% load record %}
 {% load dated_static %}
 {% block title %}{{profile_user.get_full_name}}'s profile{% endblock %}
@@ -6,15 +6,30 @@
     <link rel="alternate" type="application/atom+xml"  href="{% url user_activity_feed profile.user.id %}" title="Repower at Home User Activity" />
     {# TODO: Add a noindex meta tag here if profile is private #}
 {% endblock %}
-{% block breadcrumbs %}
-    <a href="{% url index %}">Home</a> &rsaquo;
-    {{profile_user.get_full_name}}
+{% block title_bar_image %}
+<img src="{{profile.profile_picture_large}}" alt="Profile image" width="80" height="80"/>
 {% endblock %}
-{% block right_content %}
-<div class="grid_6 alpha">
-    <div class="box_two_top"></div>
-    <div class="box_two_middle">
-        <h1>{{profile_user.get_full_name}}</h1>
+{% block title_bar_title %}{{profile_user.get_full_name}}{% endblock %}
+{% block title_bar_copy %}
+    <p id="title_bar_9c_info">
+        {% if profile.location %}
+            {{ profile.location }} | 
+        {% endif %}
+        <span>Joined {{ profile.user.date_joined|date:"M Y" }}</span>
+    </p>
+    {{ profile.about|linebreaksbr }}
+    
+{% endblock %}
+{% block tab_nav %}
+    <li class="tab_nav_selected">Overview</li>
+    <li><a href="#actions">Actions</a></li>
+    <li><a href="#communities">Communities</a></li>
+    <li><a href="#challenges">Challenges</a></li>
+    <li><a href="#events">Events</a></li>
+    <li><a href="#badges">Badges</a></li>
+    <li class="tab_nav_link"><a href="#actions">Edit your profile</a></li>
+{% endblock %}
+{% block content %}
         {% if commitment_list %}
             <h2>Commitments</h2>
             <p>
@@ -57,29 +72,29 @@
                 {% render_record rec %}
             {% endfor %}
         {% endif %}
+{% endblock %}
+
+{% block sidebar %}
+    <div class="ribbon_small ribbon_small_dark">
+        Vital Stats
+        <div class="ribbon_small_wrap ribbon_small_wrap_dark"></div>
     </div>
-    <div class="box_two_bottom"></div>
-</div>
-<div class="grid_3 omega">
-    <div class="box_one_top"></div>
-    <div class="box_one_middle">
-        {% with profile.profile_picture_large as picture %}
-            <img src="{{ picture }}" alt="user gravatar" width="189" />
-            {% if "www.gravatar.com" in picture %}
-                <p class="smaller right">Avatar provided by <a href="http://www.gravatar.com/">Gravatar</a></p>
-            {% endif %}
-        {% endwith %}
-        <b>Points: </b>{{ profile.total_points }}<br/>
-        {% if profile.location %}
-            <b>From: </b> {{ profile.location }}<br/>
-        {% endif %}
-        {% if profile.building_type %}
-            <b>Home:</b> {{ profile.get_building_type_display }}<br/>
-        {% endif %}
-        {% if profile.about %}
-            <b>About: </b>{{ profile.about }}<br/>
-        {% endif %}
+    {{ completed|length }} actions completed<br/>
+    {{ committed|length }} actions committed<br/>
+    {{ profile.total_points }} total points <br/>
+    0 challenges completed
+
+
+    <div class="ribbon_small">
+        Events
+        <div class="ribbon_small_wrap"></div>
     </div>
-    <div class="box_one_bottom"></div>
-</div>
+    <div class="ribbon_small">
+        Badges
+        <div class="ribbon_small_wrap"></div>
+    </div>
+    <div class="ribbon_small">
+        Committed Actions
+        <div class="ribbon_small_wrap"></div>
+    </div>
 {% endblock %}
