--- a/badges/templates/badges/detail.html
+++ b/badges/templates/badges/detail.html
@@ -1,15 +1,17 @@
-{% extends 'base.html' %}
+{% extends "base/nav_6c3c.html" %}
+
 {% block title %}{{ badge.name }}{% endblock %}
 {% block breadcrumbs %}
     <a href='{% url index %}'>Home</a> &rsaquo;
     <a href='{% url badge_list %}'>Badges</a> &rsaquo;
     {{ badge.name }}
 {% endblock %}
-{% block right_content %}
-    <div class="box_three_top"></div>
-    <div class="box_three_middle">
-        <h1>{{ badge.name }}</h1>
-        <h4>{{ badge.description|safe }}</h4>
-    </div>
-    <div class="box_three_bottom"></div>
+{% block title_bar %}
+    {{badge.name}}
+{% endblock %}
+{% block title_bar_sub %}
+    Repower at Home Badge
+{% endblock %}
+{% block content %}
+    {{ badge.description|safe }}
 {% endblock %}
