--- a/groups/templates/groups/group_create.html
+++ b/groups/templates/groups/group_create.html
@@ -1,4 +1,5 @@
-{% extends "groups/base.html" %}
+{% extends "base/nav_form.html" %}
+
 {% load dated_static %}
 {% block title %}Create a Community{% endblock %}
 {% block breadcrumbs %}
@@ -6,19 +7,19 @@
 <a href="{% url group_list %}">Community</a> &rsaquo;
 Create Community
 {% endblock %}
-{% block right_content %}
-    <div class="grid_6 alpha">
-        <div class="box_two_top"></div>
-        <div class="box_two_middle">
-            <form id="group_form" action="" method="post" enctype="multipart/form-data">
-                <h1>Create a Community</h1>
-                {% include "groups/_group_form.html" %}
-                <p><input type="submit" value="Create Community" /></p>
-                {% csrf_token %}
-            </form>
+{% block form_info %}
+    info!
+{% endblock %}
+{% block content %}
+    <form id="group_form" action="" method="post" enctype="multipart/form-data">
+        <h1>Create a Community</h1>
+        {% include "base/_form.html" %}
+        <div class="form_buttons">
+            <a href="{% url group_list %}" class="form_cancel">Cancel</a>
+            <button class="button_mega" type="submit">Create Community</button>
         </div>
-        <div class="box_two_bottom"></div>
-    </div>
+        {% csrf_token %}
+    </form>
     <script>
         var RAH = RAH || {};
         RAH.pagescripts = RAH.pagescripts || [];
