--- a/groups/templates/groups/group_detail.html
+++ b/groups/templates/groups/group_detail.html
@@ -1,4 +1,4 @@
-{% extends "groups/base.html" %}
+{% extends "base/nav_6c3c_b.html" %}
 {% load record %}
 {% load invites %}
 {% load dated_static %}
@@ -9,16 +9,33 @@
         <link rel="alternate" type="application/atom+xml"  href="{% url group_activity_feed group.slug %}" title="Repower at Home Community Activity" />
     {% endif %}
 {% endblock %}
-{% block breadcrumbs %}
-<a href="{% url index %}">Home</a> &rsaquo;
-<a href="{% url group_list %}">Communities</a> &rsaquo;
-{{group.name}}
+{% block title_bar_image %}
+        <img src="{{ MEDIA_URL }}{{ group.image.thumbnail_colorspace_80x80smartcrop }}" alt="group image" height="80" width="80" />
 {% endblock %}
-{% block right_content %}
-<div class="grid_6 alpha">
-    <div class="box_two_top"></div>
-    <div class="box_two_middle">
-        <h1>{{group.name}}</h1>
+{% block title_bar_title %}{{group.name}}{% endblock %}
+{% block title_bar_copy %}
+    <p id="title_bar_9c_info">
+        {% if group.location %}
+            {{ group.location }} | 
+        {% endif %}
+        <span>Created {{ group.created|date:"M Y" }}</span>
+    </p>
+    {{ group.description|linebreaksbr }}
+    
+{% endblock %}
+{% block tab_nav %}
+    <li class="tab_nav_selected">Overview</li>
+    <li><a href="#actions">Actions</a></li>
+    <li><a href="#communities">Communities</a></li>
+    <li><a href="#challenges">Challenges</a></li>
+    <li><a href="#events">Events</a></li>
+    <li><a href="#badges">Badges</a></li>
+    {% if is_manager %}
+    <li class="tab_nav_link"><a href="{% url group_edit group.slug %}">Edit community</a></li>
+    {% endif %}
+{% endblock %}
+
+{% block content %}
         <table class="tablesorter">
             <thead>
                 <tr>
@@ -41,11 +58,6 @@
                 {% endfor %}
             </tbody>
         </table>
-    </div>
-    <div class="box_two_bottom"></div>
-    
-    <div class="box_two_top"></div>
-    <div class="box_two_middle">
         {% if not group.is_geo_group %}
             <h2>Discussions</h2>
             <div class="group_disc_box_links">
@@ -65,12 +77,8 @@
                 <em>No discussions yet.</em>
             {% endif %}
         {% endif %}
-    </div>
-    <div class="box_two_bottom"></div>
     
     {% if group_records %}
-    <div class="box_two_top"></div>
-    <div class="box_two_middle">
         <h2>Community Activity
             {% if group.slug %}
                 <a class="atom_link" href="{% url group_activity_feed group.slug %}">
@@ -81,23 +89,14 @@
         {% for record in group_records %}
             {% render_record record %}
         {% endfor %}
-    </div>
-    <div class="box_two_bottom"></div>
     {% endif %}
-</div>
-<div class="grid_3 omega">
-    <div class="box_one_top"></div>
-    <div class="box_one_middle">
-        <img src="{{ MEDIA_URL }}{{ group.image.thumbnail_colorspace_189x157smartcrop }}" alt="group image" height="157" width="189" />
-        <div>{{ group.description|linebreaks }}</div>
+
         <p>
             Community points: {{ group.total_points }}<br />
             Total members: {{ group.total_members }}<br />
         </p>
         <p>
-            {% if is_manager %}
-                <a href="{% url group_edit group.slug %}">Edit Community</a><br/>
-            {% endif %}
+
             {% if group.is_joinable and is_member %}
                 <a href="{% url group_leave group.id %}">Leave Community</a>
             {% endif %}
@@ -108,12 +107,8 @@
                 <p>Your membership status is currently <b>pending</b>.</p>
             {% endif %}
         </p>
-    </div>
-    <div class="box_one_bottom"></div>
     
     {% if requesters %}
-    <div class="box_one_top"></div>
-    <div class="box_one_middle">
         <h3>Membership Requests</h3>
         <ul>
             {% for requester in requesters %}
@@ -126,13 +121,9 @@
                 </li>
             {% endfor %}
         </ul>
-    </div>
-    <div class="box_one_bottom"></div>
     {% endif %}
 
     {% if event_requests %}
-    <div class="box_one_top"></div>
-    <div class="box_one_middle">
         <h3>Event Link Requests</h3>
         <ul>
             {% for er in event_requests %}
@@ -146,13 +137,9 @@
                 </li>
             {% endfor %}
         </ul>
-    </div>
-    <div class="box_one_bottom"></div>
     {% endif %}
     
     {% if is_member %}
-    <div class="box_one_top"></div>
-    <div class="box_one_middle">
         <h3>Community Invitations</h3>
         <p>
             Invites sent: {{ group.invites_sent }}
@@ -161,13 +148,9 @@
         <div id='invite_friend_dialog'>
             {% get_invite_form for group %}
         </div>
-    </div>
-    <div class="box_one_bottom"></div>
     {% endif %}
     
     {% if popular_actions %}
-    <div class="box_one_top"></div>
-    <div class="box_one_middle">
         <h3>Popular Actions</h3>
         {% for action in popular_actions %}
         <p>
@@ -175,10 +158,7 @@
             <span class="smaller">{{ action.completes_in_group }} member{{ action.completes_in_group|pluralize }}</span>
         </p>
         {% endfor %}
-    </div>
-    <div class="box_one_bottom"></div>
     {% endif %}
-</div>
 <script>
     var RAH = RAH || {};
     RAH.pagescripts = RAH.pagescripts || [];
