--- a/groups/templates/groups/group_edit.html
+++ b/groups/templates/groups/group_edit.html
@@ -1,4 +1,5 @@
-{% extends "groups/base.html" %}
+{% extends "base/nav_form.html" %}
+
 {% load dated_static %}
 {% block title %}Edit {{ group.name }} settings{% endblock %}
 {% block breadcrumbs %}
@@ -7,11 +8,7 @@
     <a href="{% url group_detail group.slug %}">{{ group.name }}</a> &rsaquo;
     Edit Community
 {% endblock %}
-{% block right_content %}
-    <div class="grid_6 alpha">
-        <div class="box_two_top"></div>
-        <div class="box_two_middle">
-            <div class="tabs" id="group_edit_tabs">
+{% block content %}
                 <ul>
                     <li><a href="#group_tab">Community</a></li>
                     <li><a href="#members_tab">Members</a></li>
@@ -47,14 +44,7 @@
                         {% csrf_token %}
                     </form>
                 </div>
-            </div>
-        </div>
-        <div class="box_two_bottom"></div>
-    </div>
-    <div class="grid_3 omega">
         {% if requesters %}
-        <div class="box_one_top"></div>
-        <div class="box_one_middle">
                 <h4>Membership Requests</h4>
                 <ul>
                     {% for requester in requesters %}
@@ -67,10 +57,7 @@
                         </li>
                     {% endfor %}
                 </ul>
-        </div>
-        <div class="box_one_bottom"></div>
         {% endif %}
-    </div>
     <script>
         var RAH = RAH || {};
         RAH.pagescripts = RAH.pagescripts || [];
