Search, GA opt out and profile edit now extend new templates. Logout button.

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -28,11 +28,11 @@
         <link rel="alternate" type="application/atom+xml"  href="{% url blog_feed %}" title="Repower at Home Blog" />
         <link rel="shortcut icon" href="{% dated_static 'images/theme/favicon.ico' %}"/>
         <link rel="stylesheet" href="{% dated_static 'css/style_new.css' %}" type="text/css" media="screen" charset="utf-8"/>
-        <script type="text/javascript">
-            var _gaq = _gaq || [];
-            _gaq.push(['_setAccount', 'UA-11623269-1']);
-            _gaq.push(['_trackPageview']);
-        </script>
+            <script type="text/javascript">
+                var _gaq = _gaq || [];
+                _gaq.push(['_setAccount', 'UA-11623269-1']);
+                _gaq.push(['_trackPageview']);
+            </script>
         {% block extrahead %}{% endblock %}
         {% if testing_feedback_form %}
             <link rel="stylesheet" href="{% dated_static 'css/testing_widget.css' %}" type="text/css" media="screen" charset="utf-8"/>
@@ -55,7 +55,11 @@
                     <div id="header_links">
                         <a href="/about/" id="header_about">About Us</a>
                         <a href="{% url blog_index %}">Blog</a>
-                        <a href="{% url login %}" class="button button_small">Log In</a>
+                         {% if request.user.is_authenticated %}
+                            <a href="{% url logout %}" class="button button_small button_blue">Log Out</a>
+                         {% else %}
+                            <a href="{% url login %}" class="button button_small">Log In</a>
+                         {% endif %}
                     </div>
                 </div>
             </div>
@@ -123,10 +127,7 @@
             var media_url = "{{ MEDIA_URL }}"; // contains trailing slash
             var RAH = RAH || {};
             RAH.ENV = {};
-            (function () {
-                this.nav_select = "{% block rah_nav_select %}{% endblock %}";
-                this.facebook_appid = {{ FACEBOOK_APPID }};
-            }).apply(RAH.ENV);
+            RAH.ENV.facebook_appid = '{{ FACEBOOK_APPID }}';
         </script>
         <script type="text/javascript" charset="utf-8" src="{% dated_static 'js/require-jquery.js' %}"></script>
         {% block extrajs %}{% endblock %}
